# zstdlib

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pip.yml
tests/: not_set.py  test_ansi.py  test_enum.py  test_freezable.py  test_frozen.py  test_io.py  test_singleton.py
tests/log/: base.py  test_cute.py  test_trace.py
zstdlib/: __init__.py  ansi.py  enum.py  freezable.py  frozen.py  io.py  not_set.py  singleton.py
zstdlib/log/: __init__.py  cute.py  trace.py
